# Ruff

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENCE.md  README.md  Ruff_env.cscope  conan-fix.sh  conanfile.py  conanfile.txt  cscope.files  cscope.out  lgtm.yml
.circleci/: config.yml
cmake/: ClangFormat.cmake  Conan.cmake  CppCheck.cmake  conanfile.txt  geometry-config.cmake.in  helpers.cmake  nlp-config.cmake.in  ruff-config.cmake  ruff-config.cmake.in  ruff-config.hpp.in  ui-config.cmake
data/: 1.ppm  rotated.ppm  rotated2.ppm  test.py
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/ai/: CMakeLists.txt
examples/ai/tictactoe/: tictactoe.cpp
examples/geometry/: CMakeLists.txt
examples/geometry/renderer/: CMakeLists.txt  render.cpp
examples/nlp/: CMakeLists.txt
examples/nlp/ComedyIan/: ComedyIan.cpp
examples/nlp/ComedyIan/data/: adam-devine-best-time-of-our-lives-transcript  adam-sandler-100-fresh-transcript  adel-karam-live-from-beirut-transcript  al-madrigal-why-is-the-rabbit-crying-2013-full-transcript  ali-wong-baby-cobra-2016-full-transcript  ali-wong-don-wong-transcript  ali-wong-hard-knock-wife-full-transcript  amanda-seales-i-be-knowin-transcript  amy-schumer-growing-transcript  amy-schumer-leather-special-2017-full-transcript  amy-schumer-live-apollo-2015-full-transcript  amy-schumer-mostly-sex-stuff-2012-full-transcript  amy-schumer-presents-parental-advisory-transcript  andy-woodhull-youll-always-be-late-transcript  anjelah-johnson-not-fancy-transcript  anthony-jeselnik-caligula-2013-full-transcript  anthony-jeselnik-fire-in-the-maternity-ward-transcript  anthony-jeselnik-thoughts-prayers-2015-full-transcript  ari-shaffir-double-negative-transcript  arsenio-hall-smart-and-classy-transcript  aziz-ansari-buried-alive-2013-full-transcript  aziz-ansari-intimate-moments-sensual-evening-2010-full-transcript  aziz-ansari-live-in-madison-square-garden-2015-full-transcript  aziz-ansari-nightclub-comedian-transcript  aziz-ansari-right-now-transcript  bert-kreischer-fighting-a-bear-transcript  bert-kreischer-hey-big-boy-transcript  bert-kreischer-secret-time-transcript  big-jay-oakerson-live-webster-hall-2016-full-transcript  bill-burr-im-sorry-feel-way-2014-full-transcript  bill-burr-let-it-go-2010-full-transcript  bill-burr-live-at-red-rocks-transcript  bill-burr-paper-tiger-transcript  bill-burr-people-2012-full-transcript  bill-burr-presents-friends-who-kill-transcript  bill-burr-snl-monologue-2020-transcript  bill-burr-the-philadelphia-incident-2006-transcript  bill-burr-walk-way-2017-full-transcript  bill-hicks-censored-david-letterman-transcript  bill-hicks-relentless-1992-transcript  (+334 more)
examples/nlp/music/: music_model.hpp
examples/security/: CMakeLists.txt
examples/security/crt_timer/: crt_timer.cpp
examples/security/dh_dsa_communication/: dh_dsa_communication.cpp
examples/security/dsa_runner/: dsa_runner.cpp
examples/security/rsa_aes_communication/: rsa_aes_communication.cpp
examples/security/rsa_runner/: rsa_runner.cpp
examples/ui/: CMakeLists.txt
examples/ui/astar/: CMakeLists.txt  README.md  astar.cpp
examples/ui/circles/: CMakeLists.txt  README.md  circles.cpp
examples/ui/gravity/: CMakeLists.txt  README.md  gravity.cpp
examples/ui/matching/: CMakeLists.txt  README.md  matching.cpp
examples/ui/raytrace/: raytrace.cpp
examples/ui/sand/: CMakeLists.txt  sand.cpp  sand.h  sand.hpp
examples/ui/sprites/: CMakeLists.txt  README.md  sprites.cpp
include/: Point.hpp  Search.hpp
include/Ruff/: match.hpp  point.hpp  search.hpp
include/Ruff/ui/: pixel.hpp  ui.hpp
include/photogrammetry/buffer/: camera_buf.hpp
include/ruff/: graph.hpp  logger.hpp  match.hpp  point.hpp  search.hpp  utility.hpp
include/ruff/ai/: decision_tree.hpp  node.hpp  tree.hpp
include/ruff/ai/neural/: activation_function.hpp  layer.hpp  loss_function.hpp  neural_network.hpp  optimizer.hpp  predictor.hpp  trainer.hpp
include/ruff/core/: asserts.hpp  fileio.hpp  logger.hpp  random.hpp  search.hpp  sorting.hpp  utility.hpp
include/ruff/core/models/: data.hpp  graph.hpp  point.hpp  tensor.hpp  tensor.tpp  tree.hpp
include/ruff/euler/: euler.hpp
include/ruff/geometry/: face.hpp  line.hpp  mesh.hpp  point.hpp
include/ruff/imgproc/: adapter.hpp  ascii.hpp  image.hpp  image_drawer.hpp  image_io.hpp  image_manipulator.hpp  pixel.hpp
include/ruff/nlp/: gram_model.hpp  laplace_gram_model.hpp  simple_tokenizer.hpp  tokenizer.hpp
include/ruff/security/: diffie_hellman.hpp  dsa.hpp  generator.hpp  rsa.hpp  sha256.hpp  simple_ciphers.hpp  symmetric.hpp  utility.hpp
include/ruff/sorting/: sorting.hpp
include/ruff/ui/: button.hpp  destructors.hpp  image.hpp  pixel.hpp  ray-engine.hpp  renderer.hpp  text.hpp  tile-engine.hpp  ui.hpp  window.hpp
jenkins/: Jenkinsfile
src/: CMakeLists.txt  Point.h  Search.cpp  Search.h  logger.cpp  match.cpp  ruff-config.hpp  search.cpp
src/core/: logger.cpp  search.cpp
src/euler/: q1.cpp  q2.cpp  q3.cpp  q6.cpp
src/geometry/: mesh.cpp
src/imgproc/: image.cpp  image_drawer.cpp  image_io.cpp  image_manipulator.cpp
src/nlp/: simple_tokenizer.cpp
src/photogrammetry/matching/: feature.cpp  matcher.cpp
src/photogrammetry/models/: camera.cpp
src/photogrammetry/utility/: conversions.cpp
src/security/: dsa.cpp  rsa.cpp  sha256.cpp  simple_ciphers.cpp  symmetric.cpp  utility.cpp
src/ui/: image.cpp  text.cpp  ui.cpp
test/: CMakeLists.txt  euler.cpp  graph.cpp  image.cpp  main.cpp  matcher.cpp  search.cpp  sort.cpp  ui.cpp  utility.cpp
test/ai/: function_tester.cpp  layer_tester.cpp  network_tester.cpp  search_tester.cpp
test/core/: graph_tester.cpp  tensor_tester.cpp  tree_tester.cpp  utility_tester.cpp
test/imgproc/: image_tester.cpp  transformer_tester.cpp
test/nlp/: gram_test.cpp  tokenizer_test.cpp
test/photogrammetry/: camera_test.cpp  matching_test.cpp
test/security/: cipher_test.cpp  dh_tester.cpp  dsa_test.cpp  rsa_test.cpp  symmetric_test.cpp  utility_test.cpp
test/ui/: ui_tester.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
(+10 files in other folders)
