include(helpers)
make_example(circles)
target_link_libraries(circles ruff::ui)
make_example(gravity)
target_link_libraries(gravity ruff::ui)
make_example(astar)
target_link_libraries(astar ruff::ui)
make_example(sprites)
target_link_libraries(sprites ruff::ui)
make_example(sand)
target_link_libraries(sand ruff::ui)
make_example(raytrace)
target_link_libraries(raytrace ruff::ui)
